--- a/CZThreeJS/Plugins/TestPlugin.html
+++ b/CZThreeJS/Plugins/TestPlugin.html
@@ -14,25 +14,26 @@
 
 <body>
     <div id="WebGL-output"></div>
-    <button id = "btnHide">隐藏</button>
-    <button id = "btnShow">显示</button>
+    <button id="btnHide">隐藏</button>
+    <button id="btnShow">显示</button>
 </body>
 
 <script type="text/javascript">
     $(document).ready(function() {
         var a = new $.love("#WebGL-output", {
-            title: "Plugin",
+            // title: "Plugin",
             width: "100%",
-            height: "500px"
+            height: "300px"
         });　　
 
         a.init();
 
-        $("#btnHide").click(function () {
-            a.hide();
+        $("#btnHide").click(function() {
+            a.hide("MyPlane");
+            console.log(a);
         });
 
-        $("#btnShow").click(function(){
+        $("#btnShow").click(function() {
             a.show();
         });
     });
