--- a/CZThreeJS/Plugins/TestPlugin.html
+++ b/CZThreeJS/Plugins/TestPlugin.html
@@ -8,6 +8,7 @@
     <title>jQuery Plugin</title>
     <link rel="stylesheet" href="mainStyle.css">
     <script type="text/javascript" src="../libs/three.js"></script>
+    <script type="text/javascript" src="../libs/OBJLoader.js"></script>
     <script type="text/javascript" src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
     <script type="text/javascript" src="PluginModel.js"></script>
 </head>
@@ -16,6 +17,7 @@
     <div id="WebGL-output"></div>
     <button id="btnHide">隐藏</button>
     <button id="btnShow">显示</button>
+    <button id="btnLoadOBJ">加载OBJ</button>
 </body>
 
 <script type="text/javascript">
@@ -23,7 +25,7 @@
         var a = new $.love("#WebGL-output", {
             // title: "Plugin",
             width: "100%",
-            height: "300px"
+            height: "600px"
         });　　
 
         a.init();
@@ -35,6 +37,10 @@
 
         $("#btnShow").click(function() {
             a.show();
+        });
+
+        $("#btnLoadOBJ").click(function() {
+            a.loadOBJ('pinecone.obj');
         });
     });
 </script>
