--- a/CZThreeJS/Plugins/TestPlugin.html
+++ b/CZThreeJS/Plugins/TestPlugin.html
@@ -32,7 +32,6 @@
 
         $("#btnHide").click(function() {
             a.hide("MyPlane");
-            console.log(a);
         });
 
         $("#btnShow").click(function() {
@@ -40,7 +39,7 @@
         });
 
         $("#btnLoadOBJ").click(function() {
-            a.loadOBJ('pinecone.obj');
+            a.loadOBJ('ttt.obj');
         });
     });
 </script>
