threejs加载小飞机obj模型

--- a/CZThreeJS/Plugins/TestPlugin.html
+++ b/CZThreeJS/Plugins/TestPlugin.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div id="WebGL-output"></div>
+    <div id="WebGL-output"</div>
     <button id="btnHide">隐藏</button>
     <button id="btnShow">显示</button>
     <button id="btnLoadOBJ">加载OBJ</button>
@@ -42,8 +42,8 @@
         });
 
         $("#btnLoadOBJ").click(function() {
-            // a.loadOBJ('pinecone.obj');
-            a.loadOBJ('taduan.obj');            
+            // a.loadOBJ('td.obj');
+            a.loadOBJ('glider.obj');            
         });
 
         $("#btnTest").click(function() {
